Add support for saving and reading persons with remarks